adding animation to apply now page

--- a/frontend/src/Pages/ApplyNow.css
+++ b/frontend/src/Pages/ApplyNow.css
@@ -12,6 +12,9 @@
 .back-button-container{
     text-align: left;
     margin-bottom: 20px;
+    margin-top: 5rem;
+    margin-bottom: 20px;
+    padding-left: 1rem;
 }
 
 .back-button{
